--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,11 @@ dependencies:
   http: ^1.1.2
   socket_io_client: ^2.0.3+1
   provider: ^6.1.1
+  gif_view: ^0.4.0
+  qr_flutter: ^4.1.0
+  photo_view: ^0.14.0
+
+
 
 
 
