--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,8 @@ dependencies:
   flutter_secure_storage: ^9.0.0
   progress_dialog_null_safe: ^2.0.0
   excel: ^4.0.3
+  fl_chart: ^0.35.0
+  syncfusion_flutter_charts: ^25.1.42+1
 
 dev_dependencies:
   flutter_test:
